--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-pure-render": "^1.0.2",
+    "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "redux-orm": "^0.9.0-rc.3",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
